--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,19 +1,20 @@
 version: '3.8'
 services:
- # api:
- #   container_name: stone_container
- #   env_file:
- #     - '.env'
- #   build:
- #     context: .
- #     dockerfile: Dockerfile
- #   ports:
- #     - 3000:3000
- #   networks:
- #     - nesjs-network
- #   restart: unless-stopped
+  api-stone:
+    container_name: stone_api
+    env_file:
+     - '.env'
+    build:
+      context: .
+      dockerfile: Dockerfile
+    ports:
+     - 3000:3000
+    networks:
+     - nesjs-network
+    restart: unless-stopped
   
   redis:
+    container_name: stone-redis
     image: redis:latest
     restart: always
     ports:
